--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["Anatoly <anatolyfeteleu@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "3.12"
+python = "^3.12"
 django = "^5.0.4"
 django-rest-framework = "^0.1.0"
 django-environ = "^0.11.2"
